assets/stylesheets/quick.scss
.plugin-menu-icons {
  float: left;
}

.messages-button-wrapper {
  float: left;
  .messages-button {
    float: left;
    position: relative;
    .unread-private-messages {
      top: 0px;
      right: 0px;
    }
  }
}

.current-user {
  .unread-private-messages {
    display: none;
  }
}

.messages-menu .panel-body-contents {
  overflow: hidden;
}

.messages-menu-content {
  min-height: 35px;

  .spinner {
    position: absolute;
    left: 150px;
    top: 5px;
    width: 20px;
    height: 20px;
    border-width: 2px;
    margin: 0 auto;
  }

  li {
    width: 100%;
  }
}

.messages-menu-links {
  padding: 0 2px;
  font-size: 14px;
  list-style: none;
  margin: 0;
  line-height: 17px;

  li {
    display: inline-block;
    padding: 5px;

    .message-preview {
      white-space: nowrap;
      color: #333;
      word-break: break-all;
      text-overflow: ellipsis;
      overflow: hidden;
      cursor: pointer;
      width: 100%;

      &.loading {
        opacity: 0.4;
        filter: alpha(opacity=40);
        cursor: default;
        a {
          cursor: default;
        }
      }

      &.unread {
        color: #0088cc;
      }

    }

    &:hover {
      background-color: dark-light-diff($highlight, $secondary, 50%, -55%);
    }

    span {
      color: $primary;
    }

    p {
      margin: 0;
      display: inline-block;
      word-break: break-all;
      text-overflow: ellipsis;
    }
  }

  .message-avatar {
    margin-right: 3px;
  }

  .fa {
    padding-right: 6px;
  }

  .icon {
    color: dark-light-choose(scale-color($primary, $lightness: 30%), scale-color($secondary, $lightness: 70%));
  }

  .is-warning {
    i.fa-envelope-o {
      &:before {
        content: "\f0e0";
      }
      color: $danger;
    }
  }

  .read {
    background-color: $secondary;
  }

  .none {
    padding-top: 5px;
  }
}

.new-docked-message {
  float: right;
}

.docked-composer {
  position: fixed;
  bottom: 0;
  width: 300px;
  background-color: #f1f4f4;
  box-shadow: 0 0px 15px -2px rgba(0, 0, 0, 0.25);
  border: 1px solid #E4E4E4;
  height: 400px;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -ms-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;

  &.minimized {
    height: 40px !important;
    .docked-post-stream,
    .grippie  {
      display: none;
    }
    .docked-composer-top {
      height: 40px;
    }
    .docked-draft-wrapper {
      position: absolute;
      width: 100%;
      height: 100%;
      cursor: pointer;
    }
    .docked-draft-text {
      position: absolute;
      top: 5px;
      left: 10px;
      max-width: 80%;
      line-height: 15px;
      max-height: 32px;
      overflow: hidden;
    }
  }

  &.closed {
    height: 0;
  }

  .grippie {
    height: 20px;
  }

  .toggler {
    position: absolute;
    top: 2px;
    right: 23px;
    padding: 0;
    font-size: 19px;
    color: black;
    font-weight: 900;
  }

  .cancel {
    position: absolute;
    right: 3px;
    top: 3px;
    font-size: 15px;
    color: black;
    z-index: 20;
  }

  .ac-wrap {
    position: absolute;
    width: 97% !important;
    z-index: 2;
    top: 21px;
  }

  .docked-composer-top {
    height: calc(100% - 90px);
    width: 100%;
    overflow-x: hidden;
    overflow-y: scroll;
    position: relative;
  }

  .docked-post-stream {
    padding: 10px;
    .spinner {
      position: absolute;
      top: 47%;
      left: 141px;
    }
    .docked-post {
      width: 100%;
      display: inline-block;
      padding: 5px 0;
      color: #333;
      .docked-post-user {
        display: inline-block;
        vertical-align: top;
        width: 11%;
      }
      .docked-post-content {
        display: inline-block;
        word-wrap: break-word;
        vertical-align: middle;
        max-width: 80%;
        &.yours {
          float: right;
          background-color: #E1E1E1;
          padding: 3px 6px;
          border-radius: 6px;
          display: block;
        }
        p {
          margin: 0;
        }
        img {
          max-width: 100%;
          height: auto;
        }
      }
    }
  }

  .d-editor {
    border: none;
    bottom: 0;
    width: 300px;
    left: 0;
    right: 0;
    background-color: white;
    position: absolute;
  }

  .d-editor-textarea-wrapper {
    padding: 0;
    width: 100%;
    .d-editor-input {
      height: 100%;
      border: none;
      padding: 5px;
      margin-bottom: 25px;
      box-shadow: none;
      width: 290px;
      display: block;
    }
  }

  .d-editor-container {
    padding: 0;
    position: relative;
    height: 100%;
  }

  .d-editor-button-bar {
    position: absolute;
    bottom: 3px;
    top: initial;
    width: auto;
    border: none;
    button {
      display: none;
      margin-right: 2px;
      &.upload, &.emoji {
        display: block;
      }
    }
    .d-editor-spacer {
      display: none;
    }
  }

  .d-editor-preview-header,
  .d-editor-preview-wrapper {
    display: none;
  }
}

